#16 fixed plantball recipes

--- a/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
+++ b/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
@@ -69,6 +69,9 @@ research.thaumic_arcana.leather.title=Leather Processing
 research.thaumic_arcana.leather.stage.1=Now that I can make flesh, I want to figure how to make leather. In theory, I should be able to make the meat grow the hide on itself.
 research.thaumic_arcana.leather.stage.2=I failed to grow the hide, but found something else. I can make the flesh harden into a leather like substance, and the process is similar to what I used on rotten flesh.
 
+research.thaumic_arcana.tree.title=Bush Alchemy
+research.thaumic_arcana.tree.stage.1=When I was growing plants, it wasn't too hard to add too much essencia, which sometimes cause the growth to go out of control, which was able to mutilate the plant. <LINE> This can be usefull. If I don't care about the deformaties than some new applications could emerge, namely to grow trees this way.
+research.thaumic_arcana.tree.stage.2=The tree, is more of a bush, but it is able to give me wood.I also need to add some vacuos to the formula, so I can improve the spatial conditions in there for long enough so that it won't get stuck in my cauldron, or thaumatorium.
 ##########
 #Theories#
 ##########
