prototyping new recipes

--- a/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
+++ b/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
@@ -74,6 +74,10 @@ research.thaumic_arcana.tree.title=Bush Alchemy
 research.thaumic_arcana.tree.stage.1=When I was growing plants, it wasn't too hard to add too much essencia, which sometimes cause the growth to go out of control, which was able to mutilate the plant. <LINE> This can be usefull. If I don't care about the deformaties than some new applications could emerge, namely to grow trees this way.
 research.thaumic_arcana.tree.stage.2=The tree, is more of a bush, but it is able to give me wood.I also need to add some vacuos to the formula, so I can improve the spatial conditions in there for long enough so that it won't get stuck in my cauldron, or thaumatorium. <LINE>The leaves overgrew, and became so hard that I need to crack it open by smashing it to a wall.
 
+research.thaumic_arcana.plantproducts.title=Biomanuafactury
+research.thaumic_arcana.plantproducts.stage.1= Now that I figured how to force plants to grow, I want to do something different. I want to see if I can fabricate products, that would normally come from different plants, in more flexible ways. <LINE> The first thing I want to try, is to solve a problem that has been emerging during my work. I use a lot of paper while doing research and studies. <BR> I prepared a few candidates and samples that should be useable to create paper.
+research.thaumic_arcana.plantproducts.stage.2= I ended up choosing wood as the proper material for this. With the correct formula, I can soften and reshape it's fibers to turn it into fine sheets of paper. <LINE> Now I want to do something different. I want to see if i could mold or even grow other resources.
+
 ##########
 #Theories#
 ##########
