Creature enchants now use a registry instead of an enum.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,10 @@
-initial release
+0.1.1:
+- fixed logs inside plantballs
+- fixed a variety of language keys
+- fixed research files
+- fixed nullpointer exception with Better With Mods
+
+- internal reworkings
+
+
+WARNING: If you had enchants from before, you might need to kill the entity (the same applies to your character), because the internal names have changed.
