now we can set offset values to display the enchantment circles, for each entity.

--- a/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
+++ b/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
@@ -149,5 +149,11 @@ tile.experiment_table.name=Experiment Table
 #Keys#
 ######
 key.thamic_arcana.category=Thaumic Arcana
-
 key.descriptions.desc=Swaps the descriptions of specific items
+
+
+##########
+#Commands#
+##########
+command.reload.feedback=Thaumic Arcana configs reloaded
+rendering.reload.failed=Failed to reload rendering. Check the console output for details.
