--- a/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
+++ b/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
@@ -22,8 +22,10 @@ research.thaumic_arcana.plantlife.stage.1=The first thing I should study is how 
 
 research.thaumic_arcana.creatures.title=Living Creatures
 research.thaumic_arcana.creatures.stage.1=Working with the living proves to be harder. Breathing organisms seem to actively resist magic, which makes them significantly harder to work with.<BR> But I have a plan: I have written up a recipe for an experimental formula that can theoretically stabilize the essentia enough to be safely used on living beings.
-research.thaumic_arcana.creatures.stage.2=The substance is indeed stable enough, but it's also much weaker than the liquid form. It will not cause a revolution in how we practice thaumaturgy, but it will serve me well.
-research.thaumic_arcana.creatures.formula= To create the base of a formula, right click the Experiment Table with an empty bottle, and some salis mundus.
+research.thaumic_arcana.creatures.stage.2=The substance is indeed stable enough, but it's also much weaker than the liquid form. It will not cause a revolution in how we practice thaumaturgy, but it will serve me well.<LINE> Now I'll need a way to get access to something I can experiment with. Small rodents should work. Next up, I'll design a device that can capture them.
+research.thaumic_arcana.creatures.stage.3=I have everything I need to start my experiments.
+research.thaumic_arcana.creatures.formula=To create the base of a formula, right click the Experiment Table with an empty bottle, and some salis mundus.
+research.thaumic_arcana.creatures.cage=The arcan cage needs bait (food items that rodents like), and a 10x10 area of grass around it. It also needs to see the sky.
 
 research.thaumic_arcana.wheat.title=Plant growth
 research.thaumic_arcana.wheat.stage.1=I believe that the aspects creating the elements that plants need to grow should be able to create a reaction that grows the plant instantaneously... or explode on the spot.
@@ -57,7 +59,8 @@ research.thaumic_arcana.creature_enchant.stage.4=That is it for now. I created p
 research.thaumic_arcana.creature_enchant_advanced.title=Advanced Creature enchants
 research.thaumic_arcana.creature_enchant_advanced.stage.1=There must be more for me to do.I prepared a few ingredients that I can use to try out a new formula, that should serve as the base for a much stronger enchanting powder, that (theoratically) can increase the strength of the bond between the creature and the enchantment.
 research.thaumic_arcana.creature_enchant_advanced.stage.2=I created the substance. Now I want to try out if I could increase the strenght of the creature.
-research.thaumic_arcana.creature_enchant_advanced.stage.3=Success. The new enchantment is indeed potent, but it will not work alone I'll need some internal reinforcements, or else the limbs will fall off.
+research.thaumic_arcana.creature_enchant_advanced.stage.3=Success. The new enchantment is indeed potent, but it will not work alone I'll need some internal reinforcements, or else the limbs will fall off. <LINE> Now that I see some of the applications and limitations of this technique, I want to see if I can create an enchant, that would transcend the abilities of one creature, and make it behave like it's something else. <BR><BR>A spider should suffice.
+research.thaumic_arcana.creature_enchant_advanced.stage.4=That's it for now. I need to learn more before I can do more.
 
 research.thaumic_arcana.creature_enchant.creature_enchanter_fertile=The fertility enchantment allows enchanted animals to give birth to additional offspring. Each enchanted parent provides one extra baby.
 research.thaumic_arcana.creature_enchant.creature_enchanter_protection=The protection enchantment is very straightforward: every level will divide the damage that the enchanted creature will take.
@@ -89,7 +92,15 @@ research.thaumic_arcana.tree.stage.3=The process causes a yield lower than expec
 
 research.thaumic_arcana.plantproducts.title=Biomanuafactury
 research.thaumic_arcana.plantproducts.stage.1= Now that I figured how to force plants to grow, I want to do something different. I want to see if I can fabricate products that would normally come from different plants in more flexible ways. <LINE> The first thing I want to try is to solve a problem that has been emerging during my work. I use a lot of paper while doing research and studies. <BR> I prepared a few candidates and samples that should be usable to create paper.
-research.thaumic_arcana.plantproducts.stage.2= I ended up choosing wood as the material for this. With the correct essentia, I can soften and reshape it's fibers to turn it into fine sheets of paper. <LINE> Now I want to do something different. I want to see if I could mold or even grow other resources.
+research.thaumic_arcana.plantproducts.stage.2= I ended up choosing wood as the material for this. With the correct essentia, I can soften and reshape it's fibers to turn it into fine sheets of paper. <LINE> Now I want to do something different. I want to see if I could mold or even grow other resources. <BR> Making more of some dead plantmatter should do it.
+research.thaumic_arcana.plantproducts.stage.3= The dyes reacted well to my treatment.
+
+research.thaumic_arcana.enchant_modification.title=Creature Enchant Modification
+research.thaumic_arcana.enchant_modification.stage.1=While studying the phenomenons arount creature enchants, there was something that was bothering me. It is not only affecting the flesh, but also the aura around the subject. This new "field", created by the magical dusts binds the magic to the creature. I alos noticed that this field is connected to the local aura, in a way that I don't fully understand. <BR><BR>To crack this mystery, first I'm going to try to alter it's behaviour. I should be able to change it, so that it changes the way the enchants bind. <LINE> But, first things first, I should have a way to stabilise this field, just in case something goes wrong. My theory is that a strong enough binding agent, should be able to carry the spell.
+research.thaumic_arcana.enchant_modification.stage.2=Now that I have some sort of safety net to work with, I want to see how easy it would be to break this bond down. My intiial design was that it should be as strong as possible, so that the subject can not reject it.
+research.thaumic_arcana.enchant_modification.stage.3=Total failure. I still can not break the bond, and the only thing I have, is a spell that currupts the magical energies of the enchantments. They will either stop working, or turn to their opposite effects.
+research.thaumic_arcana.enchant_modification.negation=The negation modifier will flip the multiplier of the enchantment.
+research.thaumic_arcana.enchant_modification.base=The normal modifier will revert the binding to it's default state.
 
 ##########
 #Theories#
@@ -112,7 +123,11 @@ enchant.creature_enchant.fertile=Fertile
 enchant.creature_enchant.respiration=Respiration
 enchant.creature_enchant.protection=Protection
 enchant.creature_enchant.strength=Strength
+enchant.creature_enchant.speed=Speed
+enchant.creature_enchant.spider=Spider Limbs
 
+enchant.modifier.normal=Normal
+enchant.modifier.negation=Negation
 ########
 #Items#
 ########
@@ -129,6 +144,7 @@ item.enchanting_powder.name=Enchanting Powder
 item.enchanting_powder_basic.name=Basic Enchant Upgrade Powder
 item.enchanting_powder_advanced.name=Advanced Enchant Upgrade Powder
 item.enchanting_powder_magical.name=Magical Enchant Upgrade Powder
+item.enchant_modifier.name=Enchantment Modifier Powder
 
 item.stabiliser.stable=Excellent
 item.stabiliser.unstable=Unstable
@@ -150,7 +166,7 @@ potion.sweet_relief=Sweet Relief
 ########
 
 tile.experiment_table.name=Experiment Table
-
+tile.arcane_cage.name=Arcane Cage
 
 ######
 #Keys#
@@ -158,10 +174,8 @@ tile.experiment_table.name=Experiment Table
 key.thamic_arcana.category=Thaumic Arcana
 key.descriptions.desc=Swaps the descriptions of specific items
 
-
 ##########
 #Commands#
 ##########
 command.reload.feedback=Thaumic Arcana configs reloaded
 rendering.reload.failed=Failed to reload rendering. Check the console output for details.
-
